--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,190 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Newsreader:opsz@6..72&family=Poppins&family=Roboto&display=swap');
+* {
+    font-family: 'Newsreader', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+/* STEP-1 : Hide the input type & burgerlines */
+.navbar input[type="checkbox"],
+.navbar .hamburger-lines {
+    display: none;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+/* STEP-2 : Container - Sizing */
+.container {
+    max-width: 1200px;
+    width: 90%;
+    margin: auto;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+/* STPE-3 : NavBar - Styling */
+.navbar {
+    position: fixed;
+    width: 100%;
+    background-color: rgb(38, 26, 80);
+    color: #fff;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+/* STEP-4 : NavBar-Container Styling */
+.navbar-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 58px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+/* STEP-5 : Menu List- Links Styling */
+.menu-items {
+    display: flex;
 }
+
+.menu-items li {
+    list-style-type: none;
+    margin-left: 1.5rem;
+    /* display: flex; */
+
+}
+
+.menu-items li a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.menu-items a:hover {
+    color: #f1c40f;
+}
+
+/* End For Desktop View */
+
+/* Mobile Responsive */
+@media (max-width:768px) {
+
+
+    /* STEP-6 : Hamburger Starts from here */
+
+    /* display: none; to Block -  Hamburger  */
+    .navbar-container input[type="checkbox"],
+    .navbar-container .hamburger-lines {
+        display: block;
+    }
+
+    /* Set Navbar Container to Block and Set Relative */
+    .navbar-container {
+        display: block;
+        position: relative;
+        height: 64px;
+    }
+
+    /* Input CheckBox Styling  */
+    .navbar-container input[type="checkbox"] {
+        position: absolute;
+        display: block;
+        height: 32px;
+        width: 30px;
+        top: 20px;
+        right: 20px;
+        z-index: 5;
+        opacity: 0;
+        cursor: pointer;
+    }
+
+    /* Hamburger Styling */
+
+    /* Step 1 : Hamburger Container Styling  */
+    .navbar-container .hamburger-lines {
+        display: block;
+        height: 28px;
+        width: 35px;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        z-index: 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        /* background-color: green */
+    }
+
+    /* Step 2 : Hamburger Lines Styling  */
+    .navbar-container .hamburger-lines .line {
+        display: block;
+        height: 4px;
+        width: 100%;
+        border-radius: 10px;
+        background: #fff;
+    }
+
+    /* Step 3 : Hamburger Each Line1 , Line2 & Line3  Styling  */
+
+    .navbar-container .hamburger-lines .line1 {
+        transform-origin: 0% 0%;
+        transition: transform 0.3s ease-in-out;
+    }
+
+    .navbar-container .hamburger-lines .line2 {
+        transition: transform 0.1s ease-in-out;
+    }
+
+    .navbar-container .hamburger-lines .line3 {
+        transform-origin: 0% 100%;
+        transition: transform 0.3s ease-in-out;
+    }
+
+    /* Step 4 : Styling Menu-List Vertical */
+    .navbar .menu-items {
+        position: relative;
+        left: 80%;
+        padding-top: 100px;
+        background: #24252a;
+        height: 100vh;
+        max-width: 300px;
+        transform: translate(200%);
+        display: flex;
+        flex-direction: column;
+        margin-left: -70px;
+        padding-right: 40px;
+        transition: transform 0.5s ease-in-out;
+        overflow: scroll;
+    }
+
+    /* styling links : For Mobile View */
+    .navbar .menu-items li {
+        margin-bottom: 1.8rem;
+    }
+
+
+    /* Positioning Logo */
+    .logo {
+        position: absolute;
+        z-index: 10;
+        top: 12px;
+        left: 15px;
+        font-size: 1.7rem;
+    }
+
+    /* Step 5 : Styling for :checked Value */
+    .navbar-container input[type="checkbox"]:checked~.menu-items {
+        transform: translateX(0);
+    }
+
+    .navbar-container input[type="checkbox"]:checked~.hamburger-lines .line1 {
+        transform: rotate(45deg);
+    }
+
+    .navbar-container input[type="checkbox"]:checked~.hamburger-lines .line2 {
+        transform: scaleY(0);
+    }
+
+    .navbar-container input[type="checkbox"]:checked~.hamburger-lines .line3 {
+        transform: rotate(-45deg);
+
+    }
+
+
+}
+
+/* End Of Hamburger Styling */
